--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -7,12 +7,12 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 
-spring.mail.host=smtp.gmail.com
-spring.mail.username=rrodrigomarinho
-spring.mail.password=***********
-spring.mail.properties.mail.smtp.auth = true
-spring.mail.properties.mail.smtp.socketFactory.port = 465
+spring.mail.host = smtp.mailtrap.io
+spring.mail.username = 27f87b64fc40fe
+spring.mail.password = 620dd272e8cdb2
+spring.mail.properties.mail.smtp.auth = PLAIN
+spring.mail.properties.mail.smtp.socketFactory.port = 25
 spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
-spring.mail.properties.mail.smtp.socketFactory.fallback = false
-spring.mail.properties.mail.smtp.starttls.enable = true
-spring.mail.properties.mail.smtp.ssl.enable = true
+#spring.mail.properties.mail.smtp.socketFactory.fallback = false
+#spring.mail.properties.mail.smtp.starttls.enable = true
+#spring.mail.properties.mail.smtp.ssl.enable = true
