87. Usando padrão de nomes para imagens

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=dev
+spring.profiles.active=test
 
 default.sender=rrodrigomarinho@gmail.com
 default.recipient=rrodrigomarinho@gmail.com
@@ -10,3 +10,5 @@ aws.access_key_id=
 aws.secret_access_key=
 s3.bucket=curso-spring-boot-ionic-rrodrigomarinho
 s3.region=sa-east-1
+
+img.prefix.client.profile=cp
